<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20sp"
                android:layout_marginTop="20dp"
                android:hint="@string/username">

            <EditText
                    android:id="@+id/txtUsername"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/username"
                android:paddingBottom="20sp"
                android:hint="@string/password">

            <EditText
                    android:id="@+id/txtPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
                android:id="@+id/rg1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_below="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp">

            <RadioButton
                    android:id="@+id/rLK"
                    android:text="@string/laki_laki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RadioButton
                    android:id="@+id/rPR"
                    android:text="@string/perempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rg1"
                android:layout_marginTop="20dp"
                android:hint="@string/alamat">

            <EditText
                    android:id="@+id/txtAlamat"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>